--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,6 @@ dependencies {
     implementation 'com.github.dhaval2404:imagepicker:2.1'
     implementation "com.airbnb.android:lottie:3.4.0"
 
+    implementation 'com.github.ibrahimsn98:SmoothBottomBar:1.7.9'
+
 }
