--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,12 @@ dependencies {
 
     implementation 'com.github.ibrahimsn98:SmoothBottomBar:1.7.9'
 
+    implementation 'org.osmdroid:osmdroid-android:6.1.14'
+    implementation 'org.osmdroid:osmdroid-wms:6.1.14'
+    implementation 'org.osmdroid:osmdroid-mapsforge:6.1.14'
+    implementation 'org.osmdroid:osmdroid-geopackage:6.1.14'
+    implementation 'org.osmdroid:osmdroid-shape:6.1.14'
+
+
+
 }
