--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.QuickWash"
-        tools:targetApi="31"
-        >
+        tools:targetApi="31">
+        <activity
+            android:name=".OrderDetailsActivity"
+            android:exported="false" />
         <activity
             android:name=".SelectShopActivity"
             android:exported="false" />
@@ -45,6 +47,5 @@
             </intent-filter>
         </activity>
     </application>
-
 
 </manifest>
