--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation "com.airbnb.android:lottie:3.4.0"
 
     implementation 'com.github.ibrahimsn98:SmoothBottomBar:1.7.9'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
     implementation 'org.osmdroid:osmdroid-android:6.1.14'
     implementation 'org.osmdroid:osmdroid-wms:6.1.14'
